Fix incorrect call to leftover element property

--- a/src/templates/edit-user-tab.twig
+++ b/src/templates/edit-user-tab.twig
@@ -43,7 +43,7 @@
 		title: include('_elements/element', { element: review }),
         rating: ratingHtml,
 		date: review.submissionDate|date('short'),
-		element: include('_elements/element', { element: review.element }),
+		element: include('_elements/element', { element: review.getOwner() }),
     }) %}
 {% endfor %}
 
