Update label for element/owner

--- a/src/templates/edit-user-tab.twig
+++ b/src/templates/edit-user-tab.twig
@@ -56,7 +56,7 @@
         columns: [
             { name: 'title', title: Craft.t('reviews', 'Review') },
             { name: 'rating', title: Craft.t('reviews', 'Rating') },
-            { name: 'element', title: Craft.t('reviews', 'Element') },
+            { name: 'element', title: Craft.t('reviews', 'Owner') },
             { name: 'date', title: Craft.t('reviews', 'Date') },
         ],
         container: '#reviews-vue-admin-table',
