--- a/src/templates/settings/general/index.twig
+++ b/src/templates/settings/general/index.twig
@@ -13,7 +13,7 @@
 
     {{ forms.checkboxField({
         label: 'Show pending review count badge'|t('reviews'),
-        instructions: 'Show the pending review badge in the sidebar.'|t('reviews'),
+        instructions: 'Show the sidebar badge indicating the number of pending previews.'|t('reviews'),
         name: 'settings[showSidebarBadge]',
         value: 1,
         checked: settings.showSidebarBadge,
