Fix incorrect translation categories

--- a/src/templates/settings/_layout.twig
+++ b/src/templates/settings/_layout.twig
@@ -9,7 +9,7 @@
 
 {% set navItems = {
     'general': { title: 'General'|t('reviews') },
-    'types': { title: 'Review Types'|t('commerce') },
+    'types': { title: 'Review Types'|t('reviews') },
 } %}
 
 {% block sidebar %}
