--- a/src/templates/edit-user-tab.twig
+++ b/src/templates/edit-user-tab.twig
@@ -1,4 +1,4 @@
-{% do view.registerAssetBundle('rynpsc\\reviews\\web\\assets\\ReviewsAsset') -%}
+{% do view.registerAssetBundle('nixondesign\\reviews\\web\\assets\\ReviewsAsset') -%}
 {% do view.registerAssetBundle('craft\\web\\assets\\admintable\\AdminTableAsset') -%}
 
 {% do view.registerTranslations('reviews', [
@@ -18,22 +18,22 @@
     {% set ratingHtml %}
 		{% set maxRating = review.getType().maxRating %}
 
-		{% if displayType == constant('rynpsc\\reviews\\models\\Settings::RATING_DISPLAY_STAR') %}
-			<div class="rynpsc-reviews-stars">
+		{% if displayType == constant('nixondesign\\reviews\\models\\Settings::RATING_DISPLAY_STAR') %}
+			<div class="nixondesign-reviews-stars">
 				<span class="visually-hidden">{{ review.rating }}/{{ maxRating }}</span>
 
 				{% if review.rating %}
 					{% for i in 1..review.rating %}
-						{{ svg('@rynpsc/reviews/web/assets/star-filled.svg')|attr({
-							class: 'rynpsc-reviews-star-filled',
+						{{ svg('@nixondesign/reviews/web/assets/star-filled.svg')|attr({
+							class: 'nixondesign-reviews-star-filled',
 						}) }}
 					{% endfor %}
 				{% endif %}
 
 				{% if review.rating < maxRating %}
 					{% for i in 1..(maxRating - review.rating) %}
-						{{ svg('@rynpsc/reviews/web/assets/star-empty.svg')|attr({
-							class: 'rynpsc-reviews-star-empty',
+						{{ svg('@nixondesign/reviews/web/assets/star-empty.svg')|attr({
+							class: 'nixondesign-reviews-star-empty',
 						}) }}
 					{% endfor %}
 				{% endif %}
