--- a/src/templates/elements/_index.twig
+++ b/src/templates/elements/_index.twig
@@ -1,6 +1,6 @@
 {% extends "_layouts/elementindex" %}
 
 {% set title = "Reviews"|t('reviews') %}
-{% set elementType = 'rynpsc\\reviews\\elements\\Review' %}
+{% set elementType = 'nixondesign\\reviews\\elements\\Review' %}
 
-{% do view.registerAssetBundle('rynpsc\\reviews\\web\\assets\\ReviewsAsset') %}
+{% do view.registerAssetBundle('nixondesign\\reviews\\web\\assets\\ReviewsAsset') %}
